--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "gatsby": "^2.24.67",
+    "gatsby-plugin-sass": "^2.3.16",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.11.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
